--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -37,6 +36,13 @@
       }
       .animate-fade-in-up {
         animation: fade-in-up 0.6s ease-out forwards;
+      }
+      
+      /* New style for mobile landscape to prevent overflow */
+      @media (orientation: landscape) and (max-width: 767px) {
+        .mobile-landscape-grid-fix {
+           grid-template-rows: 1fr auto;
+        }
       }
     </style>
 </head>
